--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,11 @@ package-mode = false
 python = "^3.10"
 fastapi = "^0.116.1"
 uvicorn = {extras = ["standard"], version = "^0.35.0"}
+pytest = "^8.4.1"
+python-dotenv = "^1.1.1"
+beautifulsoup4 = "^4.13.5"
+requests = "^2.32.5"
+supabase = "^2.18.1"
 
 [build-system]
 requires = ["poetry-core"]
