--- a/.github/workflows/keep-alive.yml
+++ b/.github/workflows/keep-alive.yml
@@ -8,6 +8,7 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   keep-alive:
@@ -22,14 +23,12 @@ jobs:
         run: |
           printf '💚\n' >> .keep-alive
 
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          if [ -n "$(git status --porcelain)" ]; then
-            git add .keep-alive
-            git commit -m "chore: keep alive"
-            git push origin HEAD:main
-          else
-            echo "No changes to commit"
-          fi
+      - name: Create pull request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "chore: keep alive"
+          title: "chore: keep alive"
+          body: "Automated keep-alive update."
+          branch: "chore/keep-alive"
+          add-paths: ".keep-alive"
