--- a/.github/workflows/supabase-keep-alive.yml
+++ b/.github/workflows/supabase-keep-alive.yml
@@ -2,8 +2,8 @@ name: Supabase Keep Alive
 
 on:
   schedule:
-    # Run every 5 days
-    - cron: "0 0 */5 * *"
+    # Run every 24 hours
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 permissions:
